# wedding-app

./: .firebaserc  .gitignore  .~lock.Wedding App Development.odt#  CLAUDE.md  Dockerfile  Setting Up AI Wedding Caricature API.md  Wedding App Development.odt  cloudflare-tunnels.txt  docker-compose.yml  firebase.json  package-lock.json  pyproject.toml  reminders  restartTunnel.txt  tailscale_install_wedding-app.txt
.idx/: dev.nix
app/: config.py  database.py  main.py  models.py
app/routers/: admin.py  caricature.py  gallery.py  guestbook.py
app/utils/: caricature.py  image_processor.py  stability.py
app/websocket/: manager.py
data/: wedding.db
dataconnect/: dataconnect.yaml
frontend/: .env.production  .gitignore  eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.css~  App.jsx  App.jsx~  config.js  index.css
frontend/src/components/: AdminPanel.jsx  AdminPanel.test.jsx  BackgroundSelector.jsx  CaricatureBooth.jsx  ErrorBoundary.jsx  Guestbook.jsx  Guestbook.test.jsx  Navigation.jsx  PhotoGallery.jsx  PhotoGallery.jsx~  PhotoUpload.jsx  PhotoUpload.test.jsx
frontend/src/dataconnect-generated/: index.cjs.js
frontend/src/dataconnect-generated/esm/: index.esm.js
frontend/src/hooks/: useWebSocket.js  useWebSocket.js~
frontend/src/test/: handlers.js  setup.js
tests/: conftest.py  test_admin.py  test_gallery.py  test_guestbook.py
