[project]
name = "wedding-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.27",
    "opencv-python-headless>=4.10.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.21",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
